weird button color on mobile fix?

--- a/assets/style.css
+++ b/assets/style.css
@@ -394,5 +394,6 @@ h1 {
     font-family: 'VT323', monospace;
     box-shadow: 0 0 10px 5px #0000003b;
     width: 70px;
+    color: black;
 }
 
